# lis2dw12-i2c

./: AGENTS.md  CODEOWNERS  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: check.yml
src/: lib.rs  registers.rs
supply-chain/: audits.toml  config.toml
