[package]
name = "lis2dw12-i2c"
version = "0.1.0"
repository = "https://github.com/OpenDevicePartnership/lis2dw12-i2c"
authors = ["Connor Truono <connortruono@microsoft.com>"]
description = "Platform-agnostic Rust driver for the LIS2DW12 accelerometer over I2C."
readme = "README.md"
keywords = ["accelerometer", "i2c", "driver", "embedded-hal-driver", "LIS2DW12"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/lis2dw12-i2c"
include = ["/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[dependencies]
# dependencies for all targets
bilge = "0.2.0"
embedded-hal-async = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.42.0", features = ["rt", "macros"] }

[target.'cfg(target_os = "none")'.dependencies]
# dependencies for no-std targets

[lints.clippy]
suspicious = "forbid"
correctness = "forbid"
perf = "forbid"
style = "forbid"
